hypr: basic colour scheme generation

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -26,8 +26,8 @@ general {
   gaps_out = 10
   border_size = 1
 
-  col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-  col.inactive_border = rgba(595959aa)
+  col.active_border = rgba(c1966dff) rgba(eba266ff) rgba(857f80ff) 60deg
+  col.inactive_border = rgba(c1966d24)
 
   layout = dwindle
 }
@@ -92,3 +92,6 @@ gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = off
 }
+
+# generated colours
+source = ~/.config/hypr/colours.conf   # theme
