zsh: starship default git status

--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -1,12 +1,12 @@
-format='$all$directory$git_branch$character'
-right_format = '$git_status$cmd_duration'
+format='$all$directory$git_branch $git_status$character'
+right_format = '$cmd_duration'
 continuation_prompt = '▶▶'
-add_newline = true
+add_newline = false
 
 [character]
-success_symbol = '[ ](bold fg:#b8bb26)'
-error_symbol = '[ ](bold fg:#ff0000)'
-vicmd_symbol = '[ ](bold fg:#ffffff)'
+success_symbol = '[](bold fg:#b8bb26)'
+error_symbol = '[](bold fg:#ff0000)'
+vicmd_symbol = '[](bold fg:#ffffff)'
 
 [directory]
 format = '($style)[  ](bg:none fg:foreground)[$path](bg:none fg:foreground bold)($style)'
@@ -17,9 +17,6 @@ truncate_to_repo=false
 [git_branch]
 format = '[ on  (bg:none fg:foreground bold)$branch](bg:none fg:foreground)($style)'
 style = 'bg:none fg:base'
-
-[git_status]
-format = '($style)[$all_status$ahead_behind ](bg:none fg:green)($style)'
 
 [cmd_duration]
 min_time = 1
