--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -10,7 +10,7 @@ bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, RETURN, exec, kitty
 
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, R, execr, ~/.config/rofi/launchers/type-4/launcher.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
