--- a/.config/hypr/exec.conf
+++ b/.config/hypr/exec.conf
@@ -5,3 +5,5 @@ exec-once = /usr/lib/polkit-kde-authenticaion-agent-1    # authetication prompt
 exec-once = dunst                                        # notification daemon
 exec-once = systemctl --user restart pipewire            # making sure audio works
 exec-once = wl-paste -w cliphist store                   # writing the clipboard to the history
+
+exec-once = eww open bar                                 # eww bar widget
