hypr: initial working setup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,11 +45,13 @@ decoration {
   multisample_edges = on
 
   # blur
-  blur = no
-  blur_size = 7
-  blur_passes = 4
-  blur_new_optimizations = on
-  blur_ignore_opacity = false
+  blur {
+	enabled = false
+	size = 7
+	passes = 4
+	new_optimizations = on
+	ignore_opacity = false
+  }
 
   # shadows
   drop_shadow = no
@@ -94,4 +96,4 @@ gestures {
 }
 
 # generated colours
-source = ~/.config/hypr/colours.conf   # theme
+source = ~/.config/hypr/colors.conf   # theme
