--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -14,6 +14,9 @@ bind = $mainMod, R, execr, ~/.config/rofi/launchers/type-4/launcher.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
+# applications
+bind = $mainMod SHIFT, W, exec, firefox
+
 # swap windows
 bind = $mainMod SHIFT, left, movewindow, l
 bind = $mainMod SHIFT, right, movewindow, r
