--- a/.config/hypr/env.conf
+++ b/.config/hypr/env.conf
@@ -1,20 +1,27 @@
-# contains environment variables
+# environment variables
 
 env = XDG_CURRENT_DESKTOP,Hyprland 
 env = XDG_SESSION_TYPE,wayland 
 env = XDG_SESSION_DESKTOP,Hyprland 
 
-env = GDK_BACKEND,wayland
-env = QT_QPA_PLATFORM,wayland
+# for some reason breaks dwarf fortress
+# env = SDL_VIDEODRIVER,wayland 
+
+env = GDK_BACKEND,wayland,x11
+
+env = QT_QPA_PLATFORM,"wayland;xcb"
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-
-env = SDL_VIDEODRIVER,wayland 
-env = _JAVA_AWT_WM_NONREPARENTING,1
-env = WLR_NO_HARDWARE_CURSORS,1
+env = QT_QPA_PLATFORMTHEME,qt5ct
 
 env = MOZ_DISABLE_RDD_SANDBOX,1
 env = MOZ_ENABLE_WAYLAND,1
+
+env = _JAVA_AWT_WM_NONREPARENTING,1
+
+env = CLUTTER_BACKEND,wayland
+
+env = WLR_NO_HARDWARE_CURSORS,1
 
 env = OZONE_PLATFORM,wayland
