--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -4,42 +4,53 @@
 $mainMod = SUPER
 
 # general
-bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, exit,
+bind = $mainMod, q, killactive,
+bind = $mainMod SHIFT, q, exit,
 
-bind = $mainMod, RETURN, exec, kitty
+# window
+bind = $mainMod, v, togglefloating,
 
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, execr, ~/.config/rofi/launchers/type-4/launcher.sh
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+# resizing and moving (right and left mouse buttons)
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
+
+# dwindle
+bind = $mainMod SHIFT, p, pseudo,
+bind = $mainMod SHIFT, s, togglesplit,
 
 # applications
-bind = $mainMod SHIFT, W, exec, firefox
+bind = $mainMod, r, execr, ~/.config/rofi/launchers/type-4/launcher.sh
+bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod SHIFT, w, exec, firefox
+bind = $mainMod, n, exec, kitty -e ncmpcpp
 
-# swap windows
+# window swapping
+# arrows
 bind = $mainMod SHIFT, left, movewindow, l
 bind = $mainMod SHIFT, right, movewindow, r
 bind = $mainMod SHIFT, up, movewindow, u
 bind = $mainMod SHIFT, down, movewindow, d
 
+# vim
 bind = $mainMod SHIFT, h, movewindow, l
 bind = $mainMod SHIFT, l, movewindow, r
 bind = $mainMod SHIFT, k, movewindow, u
 bind = $mainMod SHIFT, j, movewindow, d
 
-# move focus
+# moving focus
+# arrows
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+# vim
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
+# switch workspaces
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -51,7 +62,11 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+# scroll through occupied workspaces
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
+
+# moving windows between workspaces
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -62,15 +77,3 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# applications
-bind = $mainMod, W, exec, firefox
-bind = $mainMod, N, exec, ncmpcpp
