--- a/.config/hypr/env.conf
+++ b/.config/hypr/env.conf
@@ -4,12 +4,9 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland 
 env = XDG_SESSION_DESKTOP,Hyprland 
 
-# for some reason breaks dwarf fortress
-# env = SDL_VIDEODRIVER,wayland 
+env = GDK_BACKEND,wayland
 
-env = GDK_BACKEND,wayland,x11
-
-env = QT_QPA_PLATFORM,"wayland;xcb"
+env = QT_QPA_PLATFORM,wayland-egl
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
