--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+# ignore everything but selected dirs
 *
+.*
+
+# add git related fiels
+!.gitignore
+!.gitsubmodules
+
+# add zsh related files
+!.zshrc
+!.config/zsh
+!.config/zsh/.zshrc
+!.config/zsh/paths.zsh
+!.config/zsh/env.zsh
+!.config/zsh/dev.zsh
+!.config/zsh/aliases.zsh
+
+# add zathura related files
+!.config/zathura
+!.config/zathura/zathurarc
+
+# add neovim submodule
+!.config/
+!.config/nvim/
